[project]
name = "viber"
version = "0.1.0"
description = "Viber is a bot that integrates with Discord to provide various functionalities such as generating playlists based on mood."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord-py>=2.4.0,<2.5.0",
    "openai>=1.43.0,<2.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "yt-dlp>=2024.8.6,<2025.0.0",
]

license = "MIT"
authors = ["Marek Pawlak <26022173+PawlakMarek@users.noreply.github.com>"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["discord bot", "openai", "playlist", "mood-based"]
urls = {
    "Homepage" = "https://github.com/PawlakMarek/viber",
    "Source" = "https://github.com/PawlakMarek/viber",
    "Tracker" = "https://github.com/PawlakMarek/viber/issues"
}
